#1 디코딩 버젼 이슈 수정