@@ -4,15 +4,19 @@ import com.bamplee.chomi.api.datatool.papago.PapagoClient;
 import com.bamplee.chomi.api.datatool.papago.dto.PapagoRequest;
 import com.bamplee.chomi.api.datatool.papago.dto.PapagoResponse;
 import org.modelmapper.ModelMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 
 @Service
 public class TranslateServicempl implements TranslateService {
+    private static final Logger log = LoggerFactory.getLogger(TranslateServicempl.class);
+
     @Value("${papago.id}")
     private String id;
     @Value("${papago.secret}")
@@ -31,7 +35,12 @@ public class TranslateServicempl implements TranslateService {
         PapagoRequest papagoRequest = new PapagoRequest();
         papagoRequest.setSource(source);
         papagoRequest.setTarget(target);
-        papagoRequest.setText(URLDecoder.decode(text, StandardCharsets.UTF_8));
+        try {
+            papagoRequest.setText(URLDecoder.decode(text, "UTF-8"));
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+            log.info(e.getMessage());
+        }
 
         PapagoResponse papagoResponse = papagoClient.translate(id, secret, papagoRequest);
         return modelMapper.map(papagoResponse.getMessage().getResult(), TranslateResponse.class);
